# biscotti

./: .gitignore  README.md  llms.txt  pyproject.toml  vercel.json
.claude/commands/: copywriter.md
biscotti/: __init__.py  __main__.py  _builder_introspect.py  _demo_source.py  _scaffolds.py  _skill_template.md  _user_source.py  azure_discovery.py  bulk.py  cli.py  eval.py  export.py  key_store.py  main.py  models.py  pydanticai.py  registry.py  router.py  runner.py  store.py
biscotti/ui/static/: app.html  app.js  components.js  docs.html  index.html  landing.html  style.css
examples/: demo_app.py
tests/: _builders_for_tests.py  conftest.py  test_biscotti.py  test_biscotti_startup_seeding.py  test_builder_introspect.py  test_bulk.py  test_bulk_models.py  test_bulk_store.py  test_cli_init.py  test_e2e_pydanticai.py  test_export_bulk.py  test_export_import.py  test_key_store.py  test_pydanticai_integration.py  test_router_user_messages.py  test_runner.py  test_runner_user_message_fallback.py  test_scaffolds.py  test_user_prompt_decorator.py  test_user_prompt_integration.py
